--- a/src/app/edit-note-view/edit-note-view.component.html
+++ b/src/app/edit-note-view/edit-note-view.component.html
@@ -1,7 +1,5 @@
 <!-- Label to display any error messages -->
 <label class="error-message">{{ errMessage }}</label>
-
-
 <mat-form-field> 
   <input [(ngModel)]="note.title" name="editTitle" matInput placeholder="Title" type="text">
 </mat-form-field>
@@ -10,9 +8,7 @@
 </mat-form-field>
 <mat-form-field>
 <mat-select name="editStatus" placeholder="Select state" [(ngModel)]="note.state">
-  <mat-option *ngFor="let state of states" [value]="state">
-    {{ state }}
-  </mat-option>
+  <mat-option *ngFor="let state of states" [value]="state">{{ state }}</mat-option>
 </mat-select>
 </mat-form-field>
 <div class="keep-c-done-wrapper">
